# ForzudoOS

./: .coverage  README.md  ROADMAP.md  pyproject.toml
docs/: data.json  index.html
docs/assets/: styles.css
docs/src/: app.js
src/forzudo/: __init__.py  cli.py  context.py  cron_manager.py  dashboard_generator.py  notion.py  parser.py  scheduler.py  sync_bbd.py  telegram_bot.py  webhook.py
src/forzudo/notion/: __init__.py
src/forzudo/parser/: __init__.py
src/forzudo/scheduler/: __init__.py
tests/: test_parser.py
